# diesel-sample

./: .env  Cargo.toml  docker-compose.yml
migrations/2021-10-03-013711_create_posts/: up.sql
migrations/2021-10-19-083232_create_users/: up.sql
migrations/2021-10-23-080958_create_users_and_posts/: up.sql
src/: lib.rs  models.rs  post.rs  schema.rs  user.rs
src/models/: post.rs  user.rs
